<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="anime_screen_anime_no_results">No results 😓\nSwipe to refresh</string>
    <string name="anime_screen_anime_no_title">No title</string>
    <string name="anime_screen_anime_pg_rating">PG rating: %1$s</string>
    <string name="anime_screen_anime_searchLabel">Search</string>
    <string name="anime_screen_anime_nothing_found">Nothing found, try again. 😓</string>
    <string name="anime_screen_anime_failed_to_retrieve_data">Failed to retrieve data 😓</string>
    <string name="anime_screen_anime_synopsis">%1$s</string>
    <string name="anime_screen_anime_genres">Genres</string>
    <string name="anime_screen_anime_runtime">Runtime: %1$s</string>
    <string name="anime_screen_anime_ratings">ratings</string>
    <string name="anime_screen_anime_airing_status">Airing status: %1$s</string>
    <string name="anime_screen_anime_publishing">Publishing status: %1$s</string>
    <string name="anime_screen_anime_published">Published from: %1$s</string>
    <string name="anime_screen_anime_aired">Aired from: %1$s</string>
    <string name="anime_screen_anime_score">Score: %1$d</string>
    <string name="anime_screen_anime_scored_by">Scored by %1$d users</string>
    <string name="anime_screen_anime_rank">Rank %1$d</string>
    <string name="anime_screen_anime_popularity">Popularity rank %1$d</string>
    <string name="anime_screen_anime_members">Members: %1$d</string>
    <string name="anime_screen_anime_favorites">Favorites: %1$d</string>
    <string name="anime_screen_anime_title_japanese">"Title in Japanese: %1$1"</string>
    <string name="anime_screen_anime_episodes">Episodes: %1$s</string>
    <string name="anime_screen_anime_chapters">Chapters: %1$s</string>
    <string name="anime_screen_anime_volumes">Volumes: %1$s</string>
    <string name="anime_screen_anime_link_web_page">Link to open web page</string>
    <string name="anime_screen_anime_authors">Authors: %1$s</string>
    <string name="anime_screen_anime_link_trailer">Click to watch trailer</string>
    <string name="anime_screen_anime_serializations">Serializations</string>
    <string name="anime_screen_anime_serialization_name">Name: %1$s</string>
    <string name="anime_screen_anime_serialization_link">Link to web page: %1$s</string>
    <string name="anime_screen_anime_manga">Manga</string>
    <string name="anime_screen_anime_anime">Anime</string>
    <string name="anime_screen_anime_background_headline">Background</string>
    <string name="anime_screen_anime_no_data">n/a</string>
    <string name="anime_screen_anime_jikan_fav"><![CDATA[com.rick.data.model_book.Favorite anime & manga]]></string>
    <string name="anime_screen_anime_fav_jikan">com.rick.data.model_book.Favorite jikan</string>
    <string name="anime_screen_anime_favorite">com.rick.data.model_book.Favorite</string>
    <string name="anime_screen_anime_retry">Retry</string>
</resources>